<resources>
    <string name="app_name">Zenzone</string>
    <string name="Start_Relaxing">Start Relaxing</string>
    <string name="hello">Hello</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome To Zenzone</string>
    <string name="username">Username-</string>
    <string name="password">Password-</string>
    <string name="name">Name-</string>
    <string name="phone">Phone Number-</string>
    <string name="witness">Witness Numbers-</string>
    <string name="drawings">My Drawings</string>
    <string name="playlist">My Playlist</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="meditations">Meditations</string>
    <string name="counselor">Contact a Counselor</string>
    <string name="songs">Songs</string>
    <string name="paint">Paints</string>
    <string name="songs2">SONGS</string>
    <string name="English">English</string>
    <string name="Sinhala">Sinhala</string>
    <string name="others">Others</string>
    <string name="thought1">Music Can Heal The Wounds, That Medicine Cannot Touch...</string>
    <string name="paints">PAINTS</string>
    <string name="arts">ARTS</string>
    <string name="draw">TRY TO DRAW</string>
    <string name="thought2">Don\'t Wish For Happiness...  Paint For It...</string>
    <string name="meditations2">MEDITATIONS</string>
    <string name="Channel">Channel A Doctor</string>
    <string name="thought3">Quiet The Mind And The Soul Will Speak</string>
    <string name="counselor2">CONTACT A COUNSELOR</string>
    <string name="thought4">The World May Not Recognize The Value Of A Shiny Stone, But To Me You Are A DIAMOND</string>
    <string name="setting">SETTING</string>
    <string name="sounds">Sounds</string>
    <string name="notifications">Notifications</string>
    <string name="contactus">Contact Us</string>
    <string name="English2">ENGLISH</string>
    <string name="thought5">Paint \n For \n Relaxation</string>
</resources>