<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity7">

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="406dp"
        android:layout_height="344dp"
        android:layout_marginTop="428dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/y" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setting" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/paints"
        android:textColor="@color/black1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black1"
        android:text="@string/arts"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="207dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black1"
        android:text="@string/draw"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="323dp"
        android:layout_height="253dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        app:srcCompat="@drawable/paint2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="221dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:fontFamily="serif"
        android:text="@string/thought2"
        android:textAlignment="center"
        android:textColor="@color/black1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />
</androidx.constraintlayout.widget.ConstraintLayout>