<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity14">

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="406dp"
        android:layout_height="344dp"
        android:layout_marginTop="428dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/y" />

    <ImageView
        android:id="@+id/imageView47"
        android:layout_width="56dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="@color/black1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView47" />

    <Button
        android:id="@+id/button13"
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black1"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black1"
        android:text="@string/sounds"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView49"
        android:layout_width="275dp"
        android:layout_height="267dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        app:srcCompat="@drawable/image3" />

    <Button
        android:id="@+id/button15"
        android:layout_width="158dp"
        android:layout_height="51dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/black1"
        android:text="@string/contactus"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView50"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView49"
        app:srcCompat="@drawable/call" />
</androidx.constraintlayout.widget.ConstraintLayout>