<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity5">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="42dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setting" />


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="128dp"
        android:layout_height="147dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/songs1" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/paints1" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="261dp"
        android:layout_height="246dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/image1" />


    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="406dp"
        android:layout_height="344dp"
        android:layout_marginTop="428dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/y" />

    <Button
        android:id="@+id/button8"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black1"
        android:text="@string/meditations"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="243dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black1"
        android:text="@string/counselor"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/songs"
        android:textColor="@color/black1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="@string/paint"
        android:textColor="@color/black1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="49dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />




</androidx.constraintlayout.widget.ConstraintLayout>